// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for Ortto's trackActivity destination action: all fields 1`] = `
Array [
  Object {
    "anonymous_id": "9QX1u",
    "contact_profile": Object {
      "geo_mode": "ip",
      "ip": "4.211.147.169",
      "location": Object {},
      "traits": Object {},
    },
    "enable_batching": true,
    "event": "9QX1u",
    "message_id": "9QX1u",
    "namespace": "9QX1u",
    "properties": Object {
      "testType": "9QX1u",
    },
    "timestamp": "2108-01-18T04:43:16.331Z",
    "user_id": "9QX1u",
  },
]
`;

exports[`Testing snapshot for Ortto's trackActivity destination action: required fields 1`] = `
Array [
  Object {
    "anonymous_id": "9QX1u",
    "event": "9QX1u",
    "message_id": "9QX1u",
    "user_id": "9QX1u",
  },
]
`;
